--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">Robot Telepresence</string>
     <string name="title_activity_help_page">HelpPageActivity</string>
-
     <string name="helpPageText">To connect press Connection button.
         Hello I am Pepper. I can do many things.
         I can tell what is my battery percentage, talk about sports and many more things.
     </string>
-
     <string name="mid">Examples of what you can type:</string>
     <string name="list">
         \u2022How are you?\n\u2022
@@ -17,4 +15,6 @@
         Can you wave to the people?\n\u2022
         Can you tell them “Luke, I am your father”?\n
     </string>
+    <string name="clientResult1">This is wrong attempt, can you try again?</string>
+    <string name="connectionError">There is connection error with server, can you try again?</string>
 </resources>
