Fixed a timing issue happens in chat activity when network is not connected. - Deleted BaseApplication.java (since this is not useful for our app) - Changed Client constructor to get context - Added hint in edittext in Chat activity for user

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="error_connection">There is connection error with server, can you try again?</string>
     <string name="connect_btn">Connection</string>
     <string name="help_page_btn">Help Page</string>
+    <string name="hint_enter_a_message">Enter a message here</string>
 </resources>
